# wassette-clone

./: .dockerignore  .gitignore  Claude.md  Dockerfile  Dockerfile.prebuilt  Justfile  README.md  RELEASE.md  _typos.toml  docker-compose.example.yml  flake.nix  lychee.toml  policy.yaml  rust-toolchain.toml
.github/: dependabot.yml
.github/agents/: docs.agent.md
.github/instructions/: docs.instructions.md  rust.instructions.md
.github/prompts/: create-agentic-workflow.prompt.md
.github/workflows/: changelog-fragment.lock.yml  changelog-fragment.md  ci-doctor.lock.yml  (+19 more)
changelog.d/: 481.feature.md  572.misc.md  README.md  inspect-component-id.feature.md
docs/: SUMMARY.md  book.toml  changelog-workflow.md  concepts.md  faq.md  installation.md  mcp-clients.md  overview.md  quick-start.md  versions.json
examples/arxiv-rs/: Cargo.toml  README.md  policy.yaml
examples/arxiv-rs/src/: bindings.rs  lib.rs
examples/arxiv-rs/wit/: world.wit
examples/context7-rs/: Cargo.toml  Justfile  README.md  policy.yaml
examples/context7-rs/src/: bindings.rs  lib.rs
examples/context7-rs/wit/: world.wit
rules/: agent.md
scripts/: copyright.sh  validate-component-registry.sh
src/: cli_handlers.rs  commands.rs  config.rs  manifest.rs  permission_synthesis.rs  provisioning_controller.rs  registry.rs  server.rs  tools.rs  utils.rs
tests/: cli_integration_test.rs  component_policy_integration_test.rs  file_integration_test.rs  grant_permission_integration_test.rs  oci_cncf_spec_test.rs  oci_unit_test.rs  structured_output_integration_test.rs  transport_integration_test.rs
(+101 files in other folders)
