[package]
name = "context7"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde_json = "1"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
urlencoding = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "local:context7"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = "0.2.0"
"wasi:cli" = "0.2.0"

[workspace]
